force-app/main/default/objects/Product_Synchronization_Log__c/Product_Synchronization_Log__c.object-meta.xml
<CustomObject>
    <label>Product Synchronization Log</label>
    <nameField>
        <displayFormat>PROD-SYNC-{0000}</displayFormat>
        <label>Product Synchronization Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Synchronization Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>