force-app/main/default/objects/Product_Synchronization_Log__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Synchronization Logs</relationshipLabel>
    <relationshipName>Product_Synchronization_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>