force-app/main/default/objects/Product_Synchronization_Log__c/fields/public_class_ProductSyncRetryScheduledJo__c.field-meta.xml
<CustomField>
    <fullName>public_class_ProductSyncRetryScheduledJo__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>