force-app/main/default/objects/Product_Synchronization_Log__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <type>DateTime</type>
</CustomField>