force-app/main/default/objects/Product_Synchronization_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>